--- a/Spotify/Views/Shared/_Layout.cshtml
+++ b/Spotify/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
+    <div class="spotty-background"></div>
     <partial name="_LoaderPartial" />
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -33,10 +34,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="PlaylistSearch">Playlist Search</a></li>
                 </ul>
             </div>
         </div>
@@ -47,9 +46,9 @@
     <div class="container body-content">
         @RenderBody()
         @*<hr id="footerHr" />
-        <footer>
-            <p>&copy; 2018 - Spotify</p>
-        </footer>*@
+            <footer>
+                <p>&copy; 2018 - Spotify</p>
+            </footer>*@
     </div>
 
     <environment include="Development">
