--- a/Spotify/Views/Home/About.cshtml
+++ b/Spotify/Views/Home/About.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3>This is really a tool for me, hopefully it's self explanatory</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>I am a backend developer exploring some UI stuff in my spare time<br />
+    This project has been made using .NET Core MVC<br />
+    Find the code here <a href="https://github.com/philwhere/Spotify-Playlist-Searcher" target="_blank">https://github.com/philwhere/Spotify-Playlist-Searcher</a></p>
+
