Removed cookie consent popup. Made table-layout fixed. Updated data dump

--- a/Spotify/Views/Home/About.cshtml
+++ b/Spotify/Views/Home/About.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>This is really a tool for me, hopefully it's self explanatory</h3>
+<h3>This is a playlist searcher/manager. Please make sure you read any warnings that popup.</h3>
 
 <p>I am a backend developer exploring some UI stuff in my spare time<br />
-    This project has been made using .NET Core MVC<br />
-    Find the code here <a href="https://github.com/philwhere/Spotify-Playlist-Searcher" target="_blank">https://github.com/philwhere/Spotify-Playlist-Searcher</a></p>
+    This project has been made using .NET Core MVC. Find the code at the repo below<br />
+     <a href="https://github.com/philwhere/Spotify-Playlist-Searcher" target="_blank">https://github.com/philwhere/Spotify-Playlist-Searcher</a></p>
 
