Centered loading message

--- a/Spotify/Views/Shared/_LoaderPartial.cshtml
+++ b/Spotify/Views/Shared/_LoaderPartial.cshtml
@@ -7,7 +7,7 @@
             <div class="lds-hourglass"></div>
         </div>
         <div class="overlay__content">
-            <div id="loaderMessage" class="loader-message"></div>
+            <div id="loaderMessage" class="loader-message text-center"></div>
         </div>
     </div>
 </div>
