--- a/Spotify/wwwroot/css/site.css
+++ b/Spotify/wwwroot/css/site.css
@@ -3,7 +3,7 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    font-family: Circular;
+    font-family: Circular, Helvetica, Arial, sans-serif;
     font-weight: 400;
     color: white;
 }
