--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -16,8 +16,8 @@
         </div>
     </div>
     <div class="row">
-        <div id="clockdiv" class="col-xs-6">
-            <h4 class="session-text">Session: <span class="countdownDisplay"></span></h4>
+        <div id="clockDiv" class="col-xs-6">
+            <h4 class="session-text">Session: <span id="countdownDisplay"></span></h4>
         </div>
         <div class="col-xs-6 text-right">
             <div id="refreshTokenButton" class="btn spotty-button">Refresh Session</div>
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="input-group">
-                <input id="searchbar" type="text" class="form-control" aria-label="...">
+                <input id="searchBar" type="text" class="form-control" aria-label="...">
                 <div class="input-group-btn">
                     <button id="selectedSearchOption" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All <span class="caret"></span></button>
                     <ul id="searchOptions" class="dropdown-menu dropdown-menu-right">
