--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
     {
     <script>
         $(document).ready(function () {
-            const params = GetAllParams();
+            const params = GetUrlParams();
             if (!params.code) {
                 ShowLoader('Authorizing...');
-                window.location = 'https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=code'
+                window.location = 'https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=code';
             }
             else {
                 ShowLoader('Fetching playlists...');
@@ -23,7 +23,7 @@
 @functions {
 string GetEncodedRedirectUri()
 {
-    string baseUrl = $"{Context.Request.Scheme}://{Context.Request.Host}/";
+    var baseUrl = $"{Context.Request.Scheme}://{Context.Request.Host}/";
     return UrlEncoder.Default.Encode(baseUrl);
 }
 }
