--- a/Spotify/wwwroot/css/site.css
+++ b/Spotify/wwwroot/css/site.css
@@ -167,6 +167,10 @@ td {
     padding: 5px 15px;
 }
 
+.library-song {
+    border-right: 9px solid rgba(29, 185, 84, 0.6);
+}
+
 .playlist-separator {
     margin-top: 0;
     margin-bottom: 8px;
