Search across multiple fields. Normalize diacritics e.g. "Mötley Crüe" -> "Motley Crue". Add "Albums" filter

--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -32,18 +32,19 @@
                     <button id="selectedSearchOption" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All <span class="caret"></span></button>
                     <ul id="searchOptions" class="dropdown-menu dropdown-menu-right">
                         <li><a href="#">All</a></li>
-                        <li id="searchGo"><a href="#">Song</a></li>
-                        <li id="searchArtist"><a href="#">Artist</a></li>
+                        <li><a href="#">Songs</a></li>
+                        <li><a href="#">Artists</a></li>
+                        <li><a href="#">Albums</a></li>
                     </ul>
                 </div><!-- /btn-group -->
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
     </div>
 
-    <div id="resultsContainer">
+    <div id="mobileResultsContainer">
     </div>
     
-    <div id="tablePanel" class="panel panel-default media hidden">
+    <div id="desktopResultsContainer" class="panel panel-default media hidden">
             <table class="table table-bordered">
                 <thead>
                     <tr>
