--- a/Spotify/Views/Shared/_Layout.cshtml
+++ b/Spotify/Views/Shared/_Layout.cshtml
@@ -34,8 +34,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Home" asp-action="PlaylistSearch">Playlist Search</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="RecentlyPlayed">Recently Played</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <li id="logoutButton"><a href="#">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -55,6 +60,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/auth.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
@@ -71,7 +77,7 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-    <script src="~/lib/lodash/lodash.min.js"></script>
+<script src="~/lib/lodash/lodash.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
