--- a/Spotify/Views/Shared/_Layout.cshtml
+++ b/Spotify/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/auth.min.js" asp-append-version="true"></script>
     </environment>
 <script src="~/lib/lodash/lodash.min.js"></script>
     @RenderSection("Scripts", required: false)
