--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -8,13 +8,13 @@
         <div class="col-xs-6">
             <h4 id="lastRefresh" class="session-text">Refreshed</h4>
         </div>
-        <div class="col-xs-6 refresh-button-container">
+        <div class="col-xs-6 centered-button-container">
             <span id="advancedRefreshToggle" class="refresh-icon body-content glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
             <div id="refreshDataButton" class="btn spotty-button">Refresh All</div>
         </div>
     </div>
     <div id="advancedRefreshRow" class="row equal" style="display: none">
-        <div class="col-xs-offset-6 col-xs-6 refresh-button-container">
+        <div class="col-xs-offset-6 col-xs-6 centered-button-container">
             <span id="chosePlaylistsFilterButton" class="refresh-icon body-content glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
             <div id="refreshSomeButton" class="btn spotty-button">Refresh Some</div>
         </div>
@@ -60,8 +60,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content filter-modal">
             <div class="modal-header">
-                <button id="clearFilterSelectionButton" type="button" class="btn spotty-button pull-right">Unselect all</button>
-                <h3 class="modal-title">Choose playlists to refresh</h3>
+                <div class="row equal">
+                    <div class="col-xs-8">
+                        <h3 class="modal-title">Choose playlists to refresh</h3>
+                    </div>
+                    <div class="col-xs-4 centered-button-container">
+                        <button id="clearFilterSelectionButton" type="button" class="btn spotty-button">Clear all</button>
+                    </div>
+                </div>
             </div>
             <div class="modal-body">
             </div>
