Only show clear button when something is selected

--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -65,7 +65,7 @@
                         <h3 class="modal-title">Choose playlists to refresh</h3>
                     </div>
                     <div class="col-xs-4 centered-button-container">
-                        <button id="clearFilterSelectionButton" type="button" class="btn spotty-button">Clear all</button>
+                        <button id="clearFilterSelectionButton" type="button" class="btn spotty-button hidden">Clear all</button>
                     </div>
                 </div>
             </div>
