Update copy. Remove contact page.

--- a/Spotify/Views/Home/About.cshtml
+++ b/Spotify/Views/Home/About.cshtml
@@ -4,7 +4,11 @@
 <h2>@ViewData["Title"]</h2>
 <h3>This is a playlist searcher/manager. Please make sure you read any warnings that popup.</h3>
 
-<p>I am a backend developer exploring some UI stuff in my spare time<br />
+<p>
+    This is a tool I made for me but you might find it useful too.<br />
     This project has been made using .NET Core MVC. Find the code at the repo below<br />
-     <a href="https://github.com/philwhere/Spotify-Playlist-Searcher" target="_blank">https://github.com/philwhere/Spotify-Playlist-Searcher</a></p>
+    <a href="https://github.com/philwhere/Spotify-Playlist-Searcher" target="_blank">
+        https://github.com/philwhere/Spotify-Playlist-Searcher
+    </a>
+</p>
 
