--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -80,10 +80,11 @@
 
 @section scripts {
     <environment include="Development">
-        <script src="~/js/countdown.js" asp-append-version=true></script>
         <script src="~/js/playlistSearch.js" asp-append-version=true></script>
+        <script src="~/js/hiddenFeatures.js" asp-append-version=true></script>
     </environment>
     <environment exclude="Development">
         <script src="~/js/playlistSearch.min.js" asp-append-version=true></script>
+        <script src="~/js/hiddenFeatures.min.js" asp-append-version=true></script>
     </environment>
 }
