Add nav tab for beta search.

--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                     window.location = possibleRedirect;
                     return;
                 }
-                window.location = "@Url.Action("PlaylistSearch", "Home")";
+                window.location = "@Url.Action("BetaPlaylistSearch", "Home")";
             }
         });
 
