--- a/Spotify/Views/Shared/_Layout.cshtml
+++ b/Spotify/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="PlaylistSearch">Playlist Search</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="BetaPlaylistSearch" title="This beta version of the playlist search integrates the web socket API to get live changes to playlists. Try any CRUD operations on one of your playlists using the mobile, desktop or web clients for a demo.">Playlist Search <sup>BETA</sup></a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="PlaylistSearch" title="The tried and tested playlist search">Playlist Search</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="RecentlyPlayed">Recently Played</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 </ul>
