Show "Page needs refresh" is JS is not loading

--- a/Spotify/Views/Home/BetaPlaylistSearch.cshtml
+++ b/Spotify/Views/Home/BetaPlaylistSearch.cshtml
@@ -6,7 +6,7 @@
 <div>
     <div class="row equal">
         <div class="col-xs-6">
-            <h4 id="lastRefresh" class="session-text">Refreshed</h4>
+            <h4 id="lastRefresh" class="session-text">Page needs refresh</h4>
         </div>
         <div class="col-xs-6 centered-button-container">
             <span id="advancedRefreshToggle" class="refresh-icon body-content glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
